fix double scroll

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,7 @@
 @import 'aboutpartners.scss';
 @import 'certificate_exhibition.scss';
  
-body{
+body, html{
     overflow-x: hidden;
 }
 .container{
@@ -28,7 +28,7 @@ body{
 
 main{
     min-height: 100vh;
-    margin-bottom: -60px;
+    margin-bottom: -55px;
 }
 
 .navbar-laravel {
